ANTLR/plc_preproc/ReentPreParser.cpp

#define _CRT_SECURE_NO_WARNINGS
#include <map>
#include <set>
#include <vector>
#include <string>
#include <algorithm>
#include <stdio.h>


// Generated from ReentPreParser.g4 by ANTLR 4.9.2


#include "ReentPreParserListener.h"

#include "ReentPreParser.h"


using namespace antlrcpp;
using namespace antlr4;

ReentPreParser::ReentPreParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

ReentPreParser::~ReentPreParser() {
  delete _interpreter;
}

std::string ReentPreParser::getGrammarFileName() const {
  return "ReentPreParser.g4";
}

const std::vector<std::string>& ReentPreParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& ReentPreParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- TranslationUnitContext ------------------------------------------------------------------

ReentPreParser::TranslationUnitContext::TranslationUnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ReentPreParser::TranslationUnitContext::EOF() {
  return getToken(ReentPreParser::EOF, 0);
}

ReentPreParser::StatementseqContext* ReentPreParser::TranslationUnitContext::statementseq() {
  return getRuleContext<ReentPreParser::StatementseqContext>(0);
}


size_t ReentPreParser::TranslationUnitContext::getRuleIndex() const {
  return ReentPreParser::RuleTranslationUnit;
}

void ReentPreParser::TranslationUnitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ReentPreParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTranslationUnit(this);
}

void ReentPreParser::TranslationUnitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ReentPreParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTranslationUnit(this);
}

ReentPreParser::TranslationUnitContext* ReentPreParser::translationUnit() {
  TranslationUnitContext *_localctx = _tracker.createInstance<TranslationUnitContext>(_ctx, getState());
  enterRule(_localctx, 0, ReentPreParser::RuleTranslationUnit);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(195);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
    case 1: {
      setState(194);
      statementseq();
      break;
    }

    default:
      break;
    }
    setState(197);
    match(ReentPreParser::EOF);

    		for (const std::string & s : scanner_refs)
    			if (scanners.find(s) == scanners.end())
    				std::cerr << "warning:" << std::string("unknown scanner '") << s <<
    						std::string("' in #add_scan/#add_parse/#scan/#parse directives") << std::endl;
    		std::map<std::string,int>::iterator it;
    		for (it = module_refs.begin(); it != module_refs.end(); it++)
    			if (modules.find(it->first) == modules.end())
    				throw FailedPredicateException(this, std::string("Unknown module '")+it->first+
    						std::string("' in some #def_pattern directives"));
    			else if (modules[it->first] != it->second)
    				throw FailedPredicateException(this, std::string("Module '")+it->first+
    						std::string("' was called with an incorrect parameters number in some #def_pattern directives"));
    	
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementseqContext ------------------------------------------------------------------

ReentPreParser::StatementseqContext::StatementseqContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ReentPreParser::StatementContext *> ReentPreParser::StatementseqContext::statement() {
  return getRuleContexts<ReentPreParser::StatementContext>();
}

ReentPreParser::StatementContext* ReentPreParser::StatementseqContext::statement(size_t i) {
  return getRuleContext<ReentPreParser::StatementContext>(i);
}


size_t ReentPreParser::StatementseqContext::getRuleIndex() const {
  return ReentPreParser::RuleStatementseq;
}

void ReentPreParser::StatementseqContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ReentPreParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatementseq(this);
}

void ReentPreParser::StatementseqContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ReentPreParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatementseq(this);
}

ReentPreParser::StatementseqContext* ReentPreParser::statementseq() {
  StatementseqContext *_localctx = _tracker.createInstance<StatementseqContext>(_ctx, getState());
  enterRule(_localctx, 2, ReentPreParser::RuleStatementseq);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(201); 
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
              setState(200);
              statement();
              break;
            }

      default:
        throw NoViableAltException(this);
      }
      setState(203); 
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

ReentPreParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ReentPreParser::DefModuleContext* ReentPreParser::StatementContext::defModule() {
  return getRuleContext<ReentPreParser::DefModuleContext>(0);
}

tree::TerminalNode* ReentPreParser::StatementContext::DefModule() {
  return getToken(ReentPreParser::DefModule, 0);
}

ReentPreParser::DefMemoizationContext* ReentPreParser::StatementContext::defMemoization() {
  return getRuleContext<ReentPreParser::DefMemoizationContext>(0);
}

tree::TerminalNode* ReentPreParser::StatementContext::DefMemoization() {
  return getToken(ReentPreParser::DefMemoization, 0);
}

ReentPreParser::PreprocPassesContext* ReentPreParser::StatementContext::preprocPasses() {
  return getRuleContext<ReentPreParser::PreprocPassesContext>(0);
}

tree::TerminalNode* ReentPreParser::StatementContext::PreprocPasses() {
  return getToken(ReentPreParser::PreprocPasses, 0);
}

ReentPreParser::AddScanContext* ReentPreParser::StatementContext::addScan() {
  return getRuleContext<ReentPreParser::AddScanContext>(0);
}

tree::TerminalNode* ReentPreParser::StatementContext::AddScan() {
  return getToken(ReentPreParser::AddScan, 0);
}

ReentPreParser::ScanContext* ReentPreParser::StatementContext::scan() {
  return getRuleContext<ReentPreParser::ScanContext>(0);
}

tree::TerminalNode* ReentPreParser::StatementContext::Scan() {
  return getToken(ReentPreParser::Scan, 0);
}

ReentPreParser::AddParseContext* ReentPreParser::StatementContext::addParse() {
  return getRuleContext<ReentPreParser::AddParseContext>(0);
}

tree::TerminalNode* ReentPreParser::StatementContext::AddParse() {
  return getToken(ReentPreParser::AddParse, 0);
}

ReentPreParser::ParseContext* ReentPreParser::StatementContext::parse() {
  return getRuleContext<ReentPreParser::ParseContext>(0);
}

tree::TerminalNode* ReentPreParser::StatementContext::Parse() {
  return getToken(ReentPreParser::Parse, 0);
}

ReentPreParser::Def_patternContext* ReentPreParser::StatementContext::def_pattern() {
  return getRuleContext<ReentPreParser::Def_patternContext>(0);
}

tree::TerminalNode* ReentPreParser::StatementContext::DefPattern() {
  return getToken(ReentPreParser::DefPattern, 0);
}

ReentPreParser::Def_xpathContext* ReentPreParser::StatementContext::def_xpath() {
  return getRuleContext<ReentPreParser::Def_xpathContext>(0);
}

tree::TerminalNode* ReentPreParser::StatementContext::DefXPath() {
  return getToken(ReentPreParser::DefXPath, 0);
}

ReentPreParser::OtherLineContext* ReentPreParser::StatementContext::otherLine() {
  return getRuleContext<ReentPreParser::OtherLineContext>(0);
}


size_t ReentPreParser::StatementContext::getRuleIndex() const {
  return ReentPreParser::RuleStatement;
}

void ReentPreParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ReentPreParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void ReentPreParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ReentPreParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}

ReentPreParser::StatementContext* ReentPreParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 4, ReentPreParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(233);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(205);
      defModule();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(206);
      match(ReentPreParser::DefModule);

      		throw FailedPredicateException(this, "Something wrong with module definition");
      	
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(208);
      defMemoization();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(209);
      match(ReentPreParser::DefMemoization);

      		throw FailedPredicateException(this, "Something wrong with memoization");
      	
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(211);
      preprocPasses();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(212);
      match(ReentPreParser::PreprocPasses);

      		throw FailedPredicateException(this, "Something wrong with '#preproc_passes(n)'");
      	
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(214);
      addScan();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(215);
      match(ReentPreParser::AddScan);

      		throw FailedPredicateException(this, "Something wrong with '#add_scan'");
      	
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(217);
      scan();
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(218);
      match(ReentPreParser::Scan);

      		throw FailedPredicateException(this, "Something wrong with '#scan'");
      	
      break;
    }

    case 11: {
      enterOuterAlt(_localctx, 11);
      setState(220);
      addParse();
      break;
    }

    case 12: {
      enterOuterAlt(_localctx, 12);
      setState(221);
      match(ReentPreParser::AddParse);

      		throw FailedPredicateException(this, "Something wrong with '#add_parse'");
      	
      break;
    }

    case 13: {
      enterOuterAlt(_localctx, 13);
      setState(223);
      parse();
      break;
    }

    case 14: {
      enterOuterAlt(_localctx, 14);
      setState(224);
      match(ReentPreParser::Parse);

      		throw FailedPredicateException(this, "Something wrong with '#parse'");
      	
      break;
    }

    case 15: {
      enterOuterAlt(_localctx, 15);
      setState(226);
      def_pattern();
      break;
    }

    case 16: {
      enterOuterAlt(_localctx, 16);
      setState(227);
      match(ReentPreParser::DefPattern);

      		throw FailedPredicateException(this, "Something wrong with '#def_pattern'");
      	
      break;
    }

    case 17: {
      enterOuterAlt(_localctx, 17);
      setState(229);
      def_xpath();
      break;
    }

    case 18: {
      enterOuterAlt(_localctx, 18);
      setState(230);
      match(ReentPreParser::DefXPath);

      		throw FailedPredicateException(this, "Something wrong with '#def_xpath'");
      	
      break;
    }

    case 19: {
      enterOuterAlt(_localctx, 19);
      setState(232);
      otherLine();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Def_patternContext ------------------------------------------------------------------

ReentPreParser::Def_patternContext::Def_patternContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ReentPreParser::Def_patternContext::DefPattern() {
  return getToken(ReentPreParser::DefPattern, 0);
}

tree::TerminalNode* ReentPreParser::Def_patternContext::AssignGreater() {
  return getToken(ReentPreParser::AssignGreater, 0);
}

tree::TerminalNode* ReentPreParser::Def_patternContext::LeftParen() {
  return getToken(ReentPreParser::LeftParen, 0);
}

tree::TerminalNode* ReentPreParser::Def_patternContext::RightParen() {
  return getToken(ReentPreParser::RightParen, 0);
}

ReentPreParser::RegexpsContext* ReentPreParser::Def_patternContext::regexps() {
  return getRuleContext<ReentPreParser::RegexpsContext>(0);
}

std::vector<tree::TerminalNode *> ReentPreParser::Def_patternContext::Identifier() {
  return getTokens(ReentPreParser::Identifier);
}

tree::TerminalNode* ReentPreParser::Def_patternContext::Identifier(size_t i) {
  return getToken(ReentPreParser::Identifier, i);
}

ReentPreParser::Put_factContext* ReentPreParser::Def_patternContext::put_fact() {
  return getRuleContext<ReentPreParser::Put_factContext>(0);
}

std::vector<ReentPreParser::Def_pattern_paramContext *> ReentPreParser::Def_patternContext::def_pattern_param() {
  return getRuleContexts<ReentPreParser::Def_pattern_paramContext>();
}

ReentPreParser::Def_pattern_paramContext* ReentPreParser::Def_patternContext::def_pattern_param(size_t i) {
  return getRuleContext<ReentPreParser::Def_pattern_paramContext>(i);
}

std::vector<tree::TerminalNode *> ReentPreParser::Def_patternContext::Comma() {
  return getTokens(ReentPreParser::Comma);
}

tree::TerminalNode* ReentPreParser::Def_patternContext::Comma(size_t i) {
  return getToken(ReentPreParser::Comma, i);
}


size_t ReentPreParser::Def_patternContext::getRuleIndex() const {
  return ReentPreParser::RuleDef_pattern;
}

void ReentPreParser::Def_patternContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ReentPreParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDef_pattern(this);
}

void ReentPreParser::Def_patternContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ReentPreParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDef_pattern(this);
}

ReentPreParser::Def_patternContext* ReentPreParser::def_pattern() {
  Def_patternContext *_localctx = _tracker.createInstance<Def_patternContext>(_ctx, getState());
  enterRule(_localctx, 6, ReentPreParser::RuleDef_pattern);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(235);
    match(ReentPreParser::DefPattern);

    		regexp_vars.clear(); regexp_vars.insert("root");
    		regexp_refs.clear();
    		std::string call_macro;
    	
    setState(237);
    dynamic_cast<Def_patternContext *>(_localctx)->id = match(ReentPreParser::Identifier);

    		if (scanners.find((dynamic_cast<Def_patternContext *>(_localctx)->id != nullptr ? dynamic_cast<Def_patternContext *>(_localctx)->id->getText() : "")) != scanners.end())
    			throw FailedPredicateException(this, "Pattern is already defined");
    		scanners.insert((dynamic_cast<Def_patternContext *>(_localctx)->id != nullptr ? dynamic_cast<Def_patternContext *>(_localctx)->id->getText() : ""));
    	
    setState(239);
    match(ReentPreParser::AssignGreater);
    setState(243);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ReentPreParser::LeftBracket: {
        setState(240);
        put_fact();
        break;
      }

      case ReentPreParser::Identifier: {
        setState(241);
        dynamic_cast<Def_patternContext *>(_localctx)->module = match(ReentPreParser::Identifier);

        				call_macro = (dynamic_cast<Def_patternContext *>(_localctx)->module != nullptr ? dynamic_cast<Def_patternContext *>(_localctx)->module->getText() : "");
        			
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(245);
    match(ReentPreParser::LeftParen);
     int param_count = 0; 
    setState(258);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      setState(247);
      def_pattern_param();
       param_count++; 
      setState(255);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == ReentPreParser::Comma) {
        setState(249);
        match(ReentPreParser::Comma);
        setState(250);
        def_pattern_param();
         param_count++; 
        setState(257);
